# auto_create_unit_test_for_swift_project

./: .gitignore  Cargo.toml  ExampleSwiftUnitTest.swift  InitFile.json  README.md
src/: config_file.rs  main.rs
