[package]
name = "auto_create_unit_test_for_swift_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
regex = "1"
handlebars = "5.1.2"
chrono = "0.4"